--- a/src/app/pages/admin/view-categories/view-categories.component.html
+++ b/src/app/pages/admin/view-categories/view-categories.component.html
@@ -59,7 +59,7 @@
             <mat-menu #actionMenu="matMenu" class="action-menu">
               <button mat-menu-item (click)="openUpdateObjDialog(element.cid, updateDialogCategory)" class="menu-item">
                 <mat-icon class="menu-icon">edit</mat-icon>
-                <span>Edit Course</span>
+                <span>Edit </span>
               </button>
               <mat-divider></mat-divider>
               <button mat-menu-item (click)="deleteCategor(element.cid)" class="menu-item delete-item">
