--- a/src/app/pages/admin/adminnavbar/adminnavbar.component.html
+++ b/src/app/pages/admin/adminnavbar/adminnavbar.component.html
@@ -71,11 +71,11 @@
               <mat-icon matListItemIcon>account_circle</mat-icon>
               <span matLine>Profile</span>
             </mat-list-item>
-            <mat-list-item routerLink="/admin/categories" class="nav-item" (click)="closeDrawerOnMobile()">
+            <mat-list-item routerLink="/admin/courses" class="nav-item" (click)="closeDrawerOnMobile()">
               <mat-icon matListItemIcon>category</mat-icon>
               <span matLine>Manage Courses</span>
             </mat-list-item>
-            <mat-list-item routerLink="/admin/add-category" class="nav-item" (click)="closeDrawerOnMobile()">
+            <mat-list-item routerLink="/admin/add-course" class="nav-item" (click)="closeDrawerOnMobile()">
               <mat-icon matListItemIcon>add_circle</mat-icon>
               <span matLine>Add Course</span>
             </mat-list-item>
