--- a/src/app/pages/admin/dashboard/dashboard.component.html
+++ b/src/app/pages/admin/dashboard/dashboard.component.html
@@ -8,6 +8,8 @@
                 <app-adminnavbar></app-adminnavbar>
 
                 <!-- <router-outlet></router-outlet> -->
+                <app-adminfooter></app-adminfooter>
+
             </div>
 
 
