--- a/src/app/pages/user/user-navbar/user-navbar.component.html
+++ b/src/app/pages/user/user-navbar/user-navbar.component.html
@@ -5,7 +5,7 @@
       <div class="col-md-12">
 
 
-        <mat-toolbar color="accent" class="mat-elevation-z8 toolbar-responsive">
+        <mat-toolbar color="primary" class="mat-elevation-z8 toolbar-responsive">
           <button (click)="drawer.toggle()" mat-icon-button>
             <mat-icon>menu</mat-icon>
           </button>
