committing Scores as decimals

--- a/src/app/pages/user/available-quizzes/available-quizzes.component.html
+++ b/src/app/pages/user/available-quizzes/available-quizzes.component.html
@@ -44,7 +44,7 @@
                       {{c.category.title}} ({{c.category.courseCode}})
                     </mat-option>
                   </mat-select>
-                  <mat-icon matSuffix>arrow_drop_down</mat-icon>
+                  <!-- <mat-icon matSuffix>arrow_drop_down</mat-icon> -->
                 </mat-form-field>
               </form>
             </mat-card-content>
