committing Scores as decimals

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,30 +1,26 @@
-
-
-
-
-
 <div class="navbar">
 
 
-  <header @fadeIn >
+  <header @fadeIn>
     <mat-toolbar color="primary" class="mat-elevation-z8">
       <span>OTC LTD</span>
       <span class="example-spacer"></span>
       <!-- <a mat-button routerLink="/">
                     <mat-icon>home</mat-icon>
         Home</a> -->
-    
 
-      <a  [routerLink]="'/signup'" mat-button aria-label="Example icon-button with heart icon">
-                    <mat-icon>person_add</mat-icon>
+
+      <a [routerLink]="'/signup'" mat-button aria-label="Example icon-button with heart icon">
+        <mat-icon>person_add</mat-icon>
         Register </a>
-      <button  mat-raised-button color="accent" routerLink="/login">
-                    <mat-icon>login</mat-icon>
+      <button mat-raised-button color="accent" routerLink="/login">
+        <mat-icon>login</mat-icon>
         Login</button>
     </mat-toolbar>
   </header>
 
 
+</div>
 
 
 
@@ -67,34 +63,4 @@
 
 
 
-
-  <!-- IF LOGGED IN NAVBAR FOR ADMIN-->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<!-- IF LOGGED IN NAVBAR FOR ADMIN-->
